--- a/inareacanaccess.html
+++ b/inareacanaccess.html
@@ -3,26 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ตรวจสอบพิกัด</title>
+    <title>กวาง กูมีอะไรจะให้มึง</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="text-center p-6 bg-white shadow-lg rounded-lg">
-        <h1 class="text-xl font-bold mb-4">ตรวจสอบพิกัดของคุณ</h1>
+        <h1 class="text-xl font-bold mb-4">มึงต้องอยู่ในฝั่งศึกษาศาสตร์ถึงมึงจะดูได้</h1>
         <button id="checkLocationBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-4">
             ตรวจสอบพิกัด
         </button>
         <p id="statusMessage" class="text-gray-700 mb-4 hidden"></p>
         <button id="facebookLinkBtn" class="bg-gray-400 text-white font-bold py-2 px-4 rounded cursor-not-allowed" disabled>
-            เปิด Facebook
+            เปิดลิ้งค์
         </button>
     </div>
+     <script>
+      document.addEventListener('contextmenu', event => event.preventDefault());
+  </script>
 
+  <script>
+      document.onkeydown = function (event) {
+          if (event.keyCode === 123) { // F12
+              return false;
+          } else if (event.ctrlKey && event.shiftKey && event.keyCode === 73) { // Ctrl+Shift+I
+              return false;
+          } else if (event.ctrlKey && event.shiftKey && event.keyCode === 67) { // Ctrl+Shift+C
+              return false;
+          } else if (event.ctrlKey && event.keyCode === 85) { // Ctrl+U
+              return false;
+          }
+      };
+  </script>
     <script>
         // พิกัดเป้าหมาย
-        const targetLatitude = 16.250813;
-        const targetLongitude = 103.247299;
+        const targetLatitude = 16.1998593;
+        const targetLongitude = 103.2820053;
 
         // ฟังก์ชันคำนวณระยะทางระหว่างสองพิกัด (Haversine formula)
         function calculateDistance(lat1, lon1, lat2, lon2) {
@@ -58,7 +74,7 @@
                         const statusMessage = document.getElementById("statusMessage");
                         const facebookLinkBtn = document.getElementById("facebookLinkBtn");
 
-                        if (distance <= 10) {
+                        if (distance <= 50) {
                             statusMessage.textContent = `คุณอยู่ในพื้นที่ (ระยะห่าง ${distance.toFixed(2)} เมตร)`;
                             statusMessage.classList.remove("hidden");
                             statusMessage.classList.add("text-green-500");
@@ -67,7 +83,7 @@
                             facebookLinkBtn.classList.remove("bg-gray-400", "cursor-not-allowed");
                             facebookLinkBtn.classList.add("bg-blue-500", "hover:bg-blue-700");
                             facebookLinkBtn.addEventListener("click", () => {
-                                window.open("https://facebook.com", "_blank");
+                                window.open("https://drive.google.com/file/d/1dm2iAEGwMJi-i89-KpOfSaL14H1Vi5PV/view?usp=drivesdk", "_blank");
                             });
                         } else {
                             statusMessage.textContent = `คุณไม่ได้อยู่ในพื้นที่ (ระยะห่าง ${distance.toFixed(2)} เมตร)`;
