--- a/slidetopaper.html
+++ b/slidetopaper.html
@@ -75,176 +75,7 @@
     <div class="gallery" id="gallery"></div>
 
     <script>
-        let imagesArray = [];
-        let imageSettings = {};
-
-        // SweetAlert prompt to get image range, extension, size, rows, and columns
-        Swal.fire({
-            title: 'ตั้งค่า (แก้ไขตรงส่วนนี้ไม่ได้)',
-            html: `   
-                <label>จำนวนคอลัมน์ต่อหน้า: <input type="number" id="columns" value="1" readonly></label><br><br>
-                <label>จำนวนแถวต่อหน้า: <input type="number" id="rows" value="2" readonly></label>
-            `,
-            confirmButtonText: 'บันทึกการตั้งค่า',
-            preConfirm: () => {
-                return {
-                    columns: document.getElementById('columns').value,
-                    rows: document.getElementById('rows').value
-                };
-            }
-        }).then((result) => {
-            if (result.isConfirmed) {
-                imageSettings = result.value;
-            }
-        });
-
-        const imageInput = document.getElementById('imageInput');
-        const gallery = document.getElementById('gallery');
-
-        // Function to trigger image upload
-        function uploadImages() {
-            imageInput.click(); // Trigger file input click
-        }
-
-        imageInput.addEventListener('change', (event) => {
-            const files = Array.from(event.target.files);
-            imagesArray = []; // Clear the existing array
-
-            files.forEach(file => {
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    imagesArray.push({ name: file.name, src: e.target.result });
-                };
-                reader.readAsDataURL(file);
-            });
-
-            // Enable the "Sort Images" button once files are uploaded
-            document.querySelector('.sort-button').disabled = false;
-            updateButtonState('upload'); // Mark step 1 as completed
-            document.querySelector('#uploadBtn').classList.add('disabled'); // Disable upload button
-        });
-
-        // Function to sort images by filename number
-        function sortImages() {
-            imagesArray.sort((a, b) => {
-                const numA = parseInt(a.name.match(/\d+/) ? a.name.match(/\d+/)[0] : 0);
-                const numB = parseInt(b.name.match(/\d+/) ? b.name.match(/\d+/)[0] : 0);
-                return numA - numB; // Sort by number in the filename
-            });
-
-            // Enable the "Save as PDF" button after sorting
-            document.querySelector('.save-button').disabled = false;
-            updateButtonState('sort'); // Mark step 2 as completed
-
-            // Display images in the gallery after sorting
-            displayImages();
-        }
-
-        // Function to display images in the gallery
-        function displayImages() {
-            gallery.innerHTML = ''; // Clear existing images
-
-            // Set the grid layout based on columns and rows
-            const { columns, rows } = imageSettings;
-            gallery.style.gridTemplateColumns = `repeat(${columns}, 1fr)`;
-            gallery.style.gridTemplateRows = `repeat(${rows}, auto)`;
-
-            imagesArray.forEach(image => {
-                const img = document.createElement('img');
-                img.src = image.src;
-                img.alt = image.name;
-                gallery.appendChild(img);
-            });
-        }
-
-        // Function to save the gallery as PDF
-        async function saveAsPDF() {
-            const { jsPDF } = window.jspdf;
-            const pdf = new jsPDF({ format: 'a4' });
-            const images = document.querySelectorAll('.gallery img');
-            const columns = parseInt(imageSettings.columns);
-            const rows = parseInt(imageSettings.rows);
-
-            const pageWidth = 210; // A4 width in mm
-            const pageHeight = 297; // A4 height in mm
-            const margin = 10;
-            const topMargin = 30;  // เพิ่มขอบบน
-            const bottomMargin =10;// เพิ่มขอบล่าง
-            const availableHeight = pageHeight - topMargin - bottomMargin;
-
-            const imgWidth = (pageWidth - margin * 2) / columns;
-            let imgHeight;
-
-            let x = margin;
-            let y = topMargin;
-            let count = 0;
-
-            for (let i = 0; i < images.length; i++) {
-                const img = images[i];
-                const imgData = await toDataURL(img.src);
-                const aspectRatio = img.naturalWidth / img.naturalHeight;
-                imgHeight = imgWidth / aspectRatio;
-
-                // Set the alignment to the left (not centered)
-                pdf.addImage(imgData, 'JPEG', x, y, imgWidth, imgHeight);
-                count++;
-
-                if (count % columns === 0) {
-                    x = margin; // reset x to left margin
-                    y += imgHeight + 10;
-                } else {
-                    x += imgWidth + 10;
-                }
-
-                if (count % (columns * rows) === 0 && i !== images.length - 1) {
-                    pdf.addPage();
-                    x = margin; // reset x for new page
-                    y = topMargin; // reset y for new page to top margin
-                }
-
-                // Check if the remaining space on the page is too small for another image
-                if (y + imgHeight > availableHeight) {
-                    pdf.addPage();
-                    x = margin; // reset x for new page
-                    y = topMargin; // reset y to top margin
-                }
-            }
-
-            pdf.save('รวมไฟล์สไลด์.pdf');
-            updateButtonState('save'); // Mark step 3 as completed
-            document.querySelector('.restart-button').disabled = false; // Enable restart button
-        }
-
-        // Utility function to convert image to Data URL
-        function toDataURL(url) {
-            return fetch(url)
-                .then(response => response.blob())
-                .then(blob => new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onloadend = () => resolve(reader.result);
-                    reader.onerror = reject;
-                    reader.readAsDataURL(blob);
-                }));
-        }
-
-        // Function to update button state after completion of each step
-        function updateButtonState(step) {
-            if (step === 'upload') {
-                const uploadButton = document.querySelector('.upload-button');
-                uploadButton.classList.add('completed');
-            } else if (step === 'sort') {
-                const sortButton = document.querySelector('.sort-button');
-                sortButton.classList.add('completed');
-            } else if (step === 'save') {
-                const saveButton = document.querySelector('.save-button');
-                saveButton.classList.add('completed');
-            }
-        }
-
-        // Function to restart the process and refresh the page
-        function restart() {
-            location.reload(); // Refresh the page to restart the process
-        }
+  const _0x4841bf=_0x5710;(function(_0x4c3579,_0x1b0b02){const _0x425620=_0x5710,_0x2a368a=_0x4c3579();while(!![]){try{const _0x33281f=-parseInt(_0x425620(0x172))/0x1*(parseInt(_0x425620(0x18a))/0x2)+-parseInt(_0x425620(0x194))/0x3*(parseInt(_0x425620(0x161))/0x4)+-parseInt(_0x425620(0x16c))/0x5+-parseInt(_0x425620(0x17a))/0x6+-parseInt(_0x425620(0x196))/0x7+-parseInt(_0x425620(0x17d))/0x8+parseInt(_0x425620(0x187))/0x9;if(_0x33281f===_0x1b0b02)break;else _0x2a368a['push'](_0x2a368a['shift']());}catch(_0x48030a){_0x2a368a['push'](_0x2a368a['shift']());}}}(_0x5d96,0x53ee6));let imagesArray=[],imageSettings={};Swal[_0x4841bf(0x173)]({'title':_0x4841bf(0x18b),'html':_0x4841bf(0x174),'confirmButtonText':'บันทึกการตั้งค่า','preConfirm':()=>{const _0x5eda41=_0x4841bf;return{'columns':document[_0x5eda41(0x188)]('columns')['value'],'rows':document['getElementById']('rows')[_0x5eda41(0x166)]};}})[_0x4841bf(0x176)](_0x28a266=>{const _0x1df305=_0x4841bf;_0x28a266['isConfirmed']&&(imageSettings=_0x28a266[_0x1df305(0x166)]);});const imageInput=document[_0x4841bf(0x188)](_0x4841bf(0x15d)),gallery=document['getElementById']('gallery');function uploadImages(){const _0x32f216=_0x4841bf;imageInput[_0x32f216(0x168)]();}imageInput[_0x4841bf(0x181)](_0x4841bf(0x180),_0xfa2cb2=>{const _0x3a914c=_0x4841bf,_0xbe59ac=Array['from'](_0xfa2cb2[_0x3a914c(0x16a)][_0x3a914c(0x183)]);imagesArray=[],_0xbe59ac[_0x3a914c(0x16e)](_0x2ae179=>{const _0x67317f=_0x3a914c,_0x3f88e4=new FileReader();_0x3f88e4[_0x67317f(0x199)]=_0x3e5584=>{const _0x5d8a40=_0x67317f;imagesArray[_0x5d8a40(0x171)]({'name':_0x2ae179[_0x5d8a40(0x18d)],'src':_0x3e5584['target'][_0x5d8a40(0x19d)]});},_0x3f88e4[_0x67317f(0x193)](_0x2ae179);}),document['querySelector']('.sort-button')[_0x3a914c(0x192)]=![],updateButtonState(_0x3a914c(0x18e)),document['querySelector']('#uploadBtn')[_0x3a914c(0x167)][_0x3a914c(0x15e)](_0x3a914c(0x192));});function sortImages(){const _0x2102ef=_0x4841bf;imagesArray[_0x2102ef(0x164)]((_0x9adb5,_0x43a264)=>{const _0x204f23=_0x2102ef,_0x4be9d2=parseInt(_0x9adb5['name'][_0x204f23(0x162)](/\d+/)?_0x9adb5[_0x204f23(0x18d)][_0x204f23(0x162)](/\d+/)[0x0]:0x0),_0x549d2a=parseInt(_0x43a264[_0x204f23(0x18d)][_0x204f23(0x162)](/\d+/)?_0x43a264[_0x204f23(0x18d)]['match'](/\d+/)[0x0]:0x0);return _0x4be9d2-_0x549d2a;}),document['querySelector'](_0x2102ef(0x195))[_0x2102ef(0x192)]=![],updateButtonState(_0x2102ef(0x164)),displayImages();}function _0x5710(_0x1da97b,_0x1b69d6){const _0x5d9696=_0x5d96();return _0x5710=function(_0x571085,_0xe1c5cf){_0x571085=_0x571085-0x15c;let _0x470ef9=_0x5d9696[_0x571085];return _0x470ef9;},_0x5710(_0x1da97b,_0x1b69d6);}function displayImages(){const _0x28db72=_0x4841bf;gallery['innerHTML']='';const {columns:_0x4528ac,rows:_0xa6e3ee}=imageSettings;gallery[_0x28db72(0x18f)][_0x28db72(0x163)]=_0x28db72(0x191)+_0x4528ac+_0x28db72(0x19a),gallery['style'][_0x28db72(0x169)]='repeat('+_0xa6e3ee+_0x28db72(0x175),imagesArray[_0x28db72(0x16e)](_0x115187=>{const _0x364f17=_0x28db72,_0x5f1d82=document[_0x364f17(0x190)](_0x364f17(0x178));_0x5f1d82['src']=_0x115187[_0x364f17(0x177)],_0x5f1d82[_0x364f17(0x160)]=_0x115187['name'],gallery[_0x364f17(0x16f)](_0x5f1d82);});}function _0x5d96(){const _0x4002fd=['classList','click','gridTemplateRows','target','columns','892785ItsdmF','กำลังบันทึก...','forEach','appendChild','JPEG','push','33564zTqTNs','fire','\x20\x20\x20\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<label>จำนวนคอลัมน์ต่อหน้า:\x20<input\x20type=\x22number\x22\x20id=\x22columns\x22\x20value=\x221\x22\x20readonly></label><br><br>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<label>จำนวนแถวต่อหน้า:\x20<input\x20type=\x22number\x22\x20id=\x22rows\x22\x20value=\x222\x22\x20readonly></label>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20',',\x20auto)','then','src','img','jspdf','2676330mivJwU','querySelectorAll','addImage','2847512OpDmwC','3)\x20บันทึกเป็นไฟล์\x20PDF','addPage','change','addEventListener','length','files','querySelector','innerText','save','23729607CsQSgx','getElementById','.sort-button','32morlMi','ตั้งค่า\x20(แก้ไขตรงส่วนนี้ไม่ได้)','รวมไฟล์สไลด์.pdf','name','upload','style','createElement','repeat(','disabled','readAsDataURL','3wAbjEP','.save-button','3069598pqrdaf','.gallery\x20img','onloadend','onload',',\x201fr)','rows','blob','result','naturalWidth','imageInput','add','onerror','alt','1347008qTSvZB','match','gridTemplateColumns','sort','completed','value'];_0x5d96=function(){return _0x4002fd;};return _0x5d96();}async function saveAsPDF(){const _0x24af1b=_0x4841bf,_0x1e23d0=document[_0x24af1b(0x184)](_0x24af1b(0x195));_0x1e23d0[_0x24af1b(0x192)]=!![],_0x1e23d0[_0x24af1b(0x185)]=_0x24af1b(0x16d);const {jsPDF:_0xf4c2a3}=window[_0x24af1b(0x179)],_0x3d4fe0=new _0xf4c2a3({'format':'a4'}),_0x176bf4=document[_0x24af1b(0x17b)](_0x24af1b(0x197)),_0x13ada5=parseInt(imageSettings[_0x24af1b(0x16b)]),_0x37dea7=parseInt(imageSettings[_0x24af1b(0x19b)]),_0x5879ac=0xd2,_0x1bb2b9=0x129,_0x15f001=0xa,_0x1980dd=0x1e,_0x3e8b06=0xa,_0x211b32=_0x1bb2b9-_0x1980dd-_0x3e8b06,_0x2b77ad=(_0x5879ac-_0x15f001*0x2)/_0x13ada5;let _0x271973,_0x502e19=_0x15f001,_0x5ca2fe=_0x1980dd,_0x482c2e=0x0;for(let _0x185793=0x0;_0x185793<_0x176bf4[_0x24af1b(0x182)];_0x185793++){const _0x59e8=_0x176bf4[_0x185793],_0x377f1e=await toDataURL(_0x59e8[_0x24af1b(0x177)]),_0x38a197=_0x59e8[_0x24af1b(0x15c)]/_0x59e8['naturalHeight'];_0x271973=_0x2b77ad/_0x38a197,_0x3d4fe0[_0x24af1b(0x17c)](_0x377f1e,_0x24af1b(0x170),_0x502e19,_0x5ca2fe,_0x2b77ad,_0x271973),_0x482c2e++,_0x482c2e%_0x13ada5===0x0?(_0x502e19=_0x15f001,_0x5ca2fe+=_0x271973+0xa):_0x502e19+=_0x2b77ad+0xa,_0x482c2e%(_0x13ada5*_0x37dea7)===0x0&&_0x185793!==_0x176bf4['length']-0x1&&(_0x3d4fe0[_0x24af1b(0x17f)](),_0x502e19=_0x15f001,_0x5ca2fe=_0x1980dd),_0x5ca2fe+_0x271973>_0x211b32&&(_0x3d4fe0['addPage'](),_0x502e19=_0x15f001,_0x5ca2fe=_0x1980dd);}_0x3d4fe0[_0x24af1b(0x186)](_0x24af1b(0x18c)),_0x1e23d0['disabled']=![],_0x1e23d0[_0x24af1b(0x185)]=_0x24af1b(0x17e),updateButtonState(_0x24af1b(0x186)),document[_0x24af1b(0x184)]('.restart-button')[_0x24af1b(0x192)]=![];}function toDataURL(_0x43e591){const _0x38d25c=_0x4841bf;return fetch(_0x43e591)[_0x38d25c(0x176)](_0x53f4e7=>_0x53f4e7[_0x38d25c(0x19c)]())['then'](_0x1ac709=>new Promise((_0xd584f5,_0x559f49)=>{const _0x208917=_0x38d25c,_0x27302e=new FileReader();_0x27302e[_0x208917(0x198)]=()=>_0xd584f5(_0x27302e[_0x208917(0x19d)]),_0x27302e[_0x208917(0x15f)]=_0x559f49,_0x27302e[_0x208917(0x193)](_0x1ac709);}));}function updateButtonState(_0x539c96){const _0x8ae1a=_0x4841bf;if(_0x539c96===_0x8ae1a(0x18e)){const _0x13b463=document[_0x8ae1a(0x184)]('.upload-button');_0x13b463['classList'][_0x8ae1a(0x15e)](_0x8ae1a(0x165));}else{if(_0x539c96===_0x8ae1a(0x164)){const _0x5b3048=document[_0x8ae1a(0x184)](_0x8ae1a(0x189));_0x5b3048[_0x8ae1a(0x167)][_0x8ae1a(0x15e)](_0x8ae1a(0x165));}else{if(_0x539c96===_0x8ae1a(0x186)){const _0x20f5ef=document[_0x8ae1a(0x184)](_0x8ae1a(0x195));_0x20f5ef[_0x8ae1a(0x167)]['add'](_0x8ae1a(0x165));}}}}function restart(){location['reload']();}
     </script>
 </body>
 </html>
