--- a/ctpdclip.html
+++ b/ctpdclip.html
@@ -4,110 +4,119 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>นำเสนอคลิป กิจกรรมเสริมความเป็นครู</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .card {
-      margin-bottom: 20px;
-    }
-    .fa-link {
-      color: blue;
-      cursor: pointer;
-    }
-
-    .large-sweetalert {
-  width: 800px; /* กำหนดขนาดความกว้างที่มากกว่า iframe */
-  height: 500px; /* กำหนดขนาดความสูง */
-}
-
-.large-sweetalert iframe {
-  width: 100%; /* ทำให้ iframe เต็มความกว้างของ SweetAlert */
-  height: 80%; /* ทำให้ iframe สูงขึ้นและเหลือพื้นที่สำหรับ title */
-}
-
-
-  </style>
 </head>
-<body>
-
-  <h1>นำเสนอคลิป กิจกรรมเสริมความเป็นครู</h1>
-  <div class="row" id="dataContainer">
+<body class="bg-gray-100 p-6">
+  <div class="flex justify-center mb-6">
+    <img src="https://lh5.googleusercontent.com/d/1RDwcMP1D672DsorfmDwzZOeZ8d68PdOg" alt="Logo" class="h-16">
+  </div>
+  
+  <h1 class="text-2xl font-bold text-center mb-6">นำเสนอคลิป กิจกรรมเสริมความเป็นครู</h1>
+  <div class="text-center mb-4">
+    <button class="bg-blue-500 text-white px-4 py-2 rounded" onclick="showFilterOptions()">ตั้งค่ากรอง</button>
+  </div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="dataContainer">
     <!-- Dynamic Post Cards Here -->
   </div>
+  
+  <footer class="mt-12 text-center text-gray-600">
+    เว็บไซต์นี้จัดทำโดย <strong>NANGTECH</strong> <br>
+    ศูนย์ฝึกประสบการณ์และพัฒนาวิชาชีพครู คณะศึกษาศาสตร์ มหาวิทยาลัยมหาสารคาม
+  </footer>
 
   <script>
     const SHEET_ID = '1L-L2xpGI_jj0o_7C4q9sjXcihfnJPrK2-XRoNBQZ4JI';
-const API_KEY = 'AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
-const SHEET_NAME = 'นำเสนอคลิปศูนย์ฝึก';
+    const API_KEY = 'AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
+    const SHEET_NAME = 'นำเสนอคลิปศูนย์ฝึก';
 
-const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${SHEET_NAME}?alt=json&key=${API_KEY}`;
+    const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${SHEET_NAME}?alt=json&key=${API_KEY}`;
+    let allData = [];
+    let selectedFields = new Set();
 
-fetch(apiUrl)
-  .then(response => response.json())
-  .then(data => {
-    const rows = data.values.slice(1); // Skip the header
-    const container = document.getElementById('dataContainer');
+    fetch(apiUrl)
+      .then(response => response.json())
+      .then(data => {
+        allData = data.values.slice(1);
+        updateDisplay();
+      })
+      .catch(error => console.error('Error fetching data:', error));
 
-    rows.forEach(row => {
-      const fieldOfStudy = row[0];
-      const year = row[1];
-      const videoUrl = row[2];
+    function updateDisplay() {
+      const container = document.getElementById('dataContainer');
+      container.innerHTML = '';
+      
+      allData.forEach(row => {
+        const fieldOfStudy = row[0];
+        const year = row[1];
+        const videoUrl = row[2];
+        
+        if (selectedFields.size === 0 || selectedFields.has(fieldOfStudy)) {
+          if (videoUrl) {
+            const youtubeId = extractYouTubeId(videoUrl);
+            const card = document.createElement('div');
+            card.className = 'bg-white shadow-lg rounded-lg p-4';
+            card.innerHTML = `
+              <h5 class="text-lg font-semibold">${fieldOfStudy}</h5>
+              <p class="text-gray-600">ชั้นปี: ${year}</p>
+              <button class="mt-2 text-blue-500 hover:underline" onclick="showVideo('${youtubeId}', '${fieldOfStudy}', '${year}')">
+                ดูวิดีโอ
+              </button>
+            `;
+            container.appendChild(card);
+          }
+        }
+      });
+    }
 
-      if (videoUrl) { // แสดงเฉพาะถ้ามีลิงก์ YouTube
-        const youtubeId = extractYouTubeId(videoUrl); // ดึง YouTube ID จากลิงก์
-
-        // สร้างการ์ดสำหรับแต่ละวิดีโอ
-        const card = document.createElement('div');
-        card.className = 'col-lg-4 col-md-6 col-sm-12'; // คลาสสำหรับ responsive
-        card.innerHTML = `
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">${fieldOfStudy}</h5>
-              <p class="card-text">ชั้นปี: ${year}</p>
-              <a class="fa fa-link" onclick="showVideo('${youtubeId}', '${fieldOfStudy}', '${year}')"></a>
-            </div>
-          </div>
-        `;
-        container.appendChild(card);
+    function extractYouTubeId(url) {
+      let videoId = '';
+      if (url.includes('watch?v=')) {
+        videoId = url.split('v=')[1].split('&')[0];
+      } else if (url.includes('youtu.be/')) {
+        videoId = url.split('youtu.be/')[1].split('?')[0];
       }
-    });
-  })
-  .catch(error => console.error('Error fetching data:', error));
+      return videoId;
+    }
 
-function extractYouTubeId(url) {
-  let videoId = '';
+    function showVideo(youtubeId, fieldOfStudy, year) {
+      Swal.fire({
+        title: `คลิปของสาขาวิชา${fieldOfStudy} (ชั้นปีที่ ${year})`,
+        html: `<iframe class="w-full h-64" src="https://www.youtube.com/embed/${youtubeId}" frameborder="0" allowfullscreen></iframe>`,
+        customClass: {
+          popup: 'w-96',
+        },
+        showCloseButton: true,
+        focusConfirm: false,
+      });
+    }
 
-  // Long format link
-  if (url.includes('watch?v=')) {
-    videoId = url.split('v=')[1].split('&')[0];
-  }
-  // Short format link
-  else if (url.includes('youtu.be/')) {
-    videoId = url.split('youtu.be/')[1].split('?')[0];
-  }
+    function showFilterOptions() {
+      const uniqueFields = [...new Set(allData.map(row => row[0]))];
+      let checkboxes = uniqueFields.map(field => `
+        <label>
+          <input type="checkbox" value="${field}" ${selectedFields.has(field) ? 'checked' : ''}> ${field}
+        </label>
+      `).join('<br>');
 
-  return videoId;
-}
-
-function showVideo(youtubeId, fieldOfStudy, year) {
-  Swal.fire({
-    title: `คลิปของสาขาวิชา${fieldOfStudy} (ชั้นปีที่ ${year})`,
-    html: `<iframe width="560" height="315" src="https://www.youtube.com/embed/${youtubeId}" frameborder="0" allowfullscreen></iframe>`,
-    customClass: {
-      popup: 'large-sweetalert' // Custom class for popup size
-    },
-    showCloseButton: true,
-    focusConfirm: false,
-  });
-}
-
-
+      Swal.fire({
+        title: 'เลือกสาขาวิชาที่ต้องการแสดง',
+        html: `
+          <div class="text-left">
+            ${checkboxes}
+          </div>
+        `,
+        showCancelButton: true,
+        confirmButtonText: 'ยืนยัน',
+        preConfirm: () => {
+          selectedFields.clear();
+          document.querySelectorAll('input[type=checkbox]:checked').forEach(checkbox => {
+            selectedFields.add(checkbox.value);
+          });
+          updateDisplay();
+        }
+      });
+    }
   </script>
-
 </body>
 </html>
