--- a/ctpdclip.html
+++ b/ctpdclip.html
@@ -21,7 +21,7 @@
   </div>
   
   <footer class="mt-12 text-center text-gray-600">
-    เว็บไซต์นี้จัดทำโดย <strong>NANGTECH</strong> <br>
+    เว็บไซต์นี้จัดทำโดย <strong>NANGSYTECH</strong> <br>
     ศูนย์ฝึกประสบการณ์และพัฒนาวิชาชีพครู คณะศึกษาศาสตร์ มหาวิทยาลัยมหาสารคาม
   </footer>
 
