--- a/blackboard19keywords.html
+++ b/blackboard19keywords.html
@@ -42,7 +42,7 @@
             user-select: none;
         }
         .keyword:hover {
-            color: #1ffffd;
+            color: #f7fbfb;
         }
     </style>
 </head>
