--- a/blackboard19keywords.html
+++ b/blackboard19keywords.html
@@ -10,7 +10,7 @@
             margin: 0;
             font-family: 'Noto Sans Thai', sans-serif;
             overflow: hidden;
-            background: linear-gradient(to bottom, #000428, #004e92);
+            background: linear-gradient(to bottom, #fcb6d1, #c2a3f0);
             color: #ffffff;
             text-align: center;
             display: flex;
